--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -126,7 +126,8 @@
     </div><!-- sidebar -->
 {% endif %}
 
-<div class="content content-fixed">
+<div class="content content-components">
+
     <div class="container">
         {% block content %}{% endblock %}
 
